fix(colors): increased main text contrast in dark mode

--- a/quartz/styles/colors.scss
+++ b/quartz/styles/colors.scss
@@ -21,7 +21,7 @@
   --midground-faint: #{$midground-faint-dark}; // frappeColors.overlay-0
   --midground: #{$midground-dark}; // frappeColors.overlay-2
   --midground-strong: #c6cff0; // frappeColors.subtext-1
-  --foreground: #d8def5; // frappeColors.text, modified
+  --foreground: #eff2ff; // frappeColors.text, modified
   --secondary: #97b0e9; // frappeColors.blue
   --tertiary: #99d1db; // custom color
   --highlight: #949cbb30; // frappeColors.overlay-2 at 20% opacity
